--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <body>
 
       <header>
-        <h1>Hydra</h1>
-        <p>The Distributed Document Processing Framework</p>
+        <span class="hydra-logo-text"></span>
+        <span class="hydra-logo-hydra"></span>
       </header>
 
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/laserval/Hydra" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/Findwise/Hydra" class="button fork"><strong>View On GitHub</strong></a>
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/laserval/Hydra/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/laserval/Hydra/tarball/master" class="button">TAR</a></li>
+            <li><a href="https://github.com/Findwise/Hydra/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/Findwise/Hydra/tarball/master" class="button">TAR</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
@@ -42,7 +42,7 @@
         <h2>What is Hydra?</h2>
 
 <p>
-When working with free text search using for example Apache Solr the quality of the data in the index is a key factor of the quality of the results delivered. Hydra is designed to give the search solution
+When working with free text search, for example using Apache Solr, the quality of the data in the index is a key factor of the quality of the results delivered. Hydra is designed to give the search solution
 the tools necessary to modify the data that is to be indexed in an efficient and flexible way. This is done by providing a scalable and efficient pipeline which the documents will have to pass through before being
 indexed into the search engine.
 </p>
@@ -86,15 +86,24 @@ All administration of the pipeline, as well as traceability, are handled directl
 <p>Hydras key design goals are for it to be:</p>
 
 <ul>
-<li><p>scalable: the central repository as well as the number of worker nodes can scale horizontally with little to no performance loss.</p></li>
-<li><p>distributed: any processing node can work on any document - a single document may be processed on any number of physical machines</p></li>
-<li><p>fail-safe: if a processing node goes down, this will not affect the documents in the pipeline, which are persisted centrally, and any other node can simply and automatically pick up where the other left off.</p></li>
-<li><p>robust: all stages run in separate JVMs, thus allowing for instance Tika to crash in a separate JVM, which will be automatically restarted, without stopping the processing pipeline for less problematic documents.</p></li>
-<li><p>easy to use/configure: stages can be run from your IDE during development, allowing testing against the actual data in the repository.</p></li>
+<li><p><strong>Scalable:</strong> the central repository as well as the number of worker nodes can scale horizontally with little to no performance loss.</p></li>
+<li><p><strong>Distributed:</strong> any processing node can work on any document - a single document may be processed on any number of physical machines</p></li>
+<li><p><strong>Fail-safe:</strong> if a processing node goes down, this will not affect the documents in the pipeline, which are persisted centrally, and any other node can simply and automatically pick up where the other left off.</p></li>
+<li><p><strong>Robust:</strong> all stages run in separate JVMs, thus allowing for instance Tika to crash in a separate JVM, which will be automatically restarted, without stopping the processing pipeline for less problematic documents.</p></li>
+<li><p><strong>Easy to use/configure:</strong> stages can be run from your IDE during development, allowing testing against the actual data in the repository.</p></li>
+</ul>
+
+<h2>Get involved</h2>
+
+<p>The community is based around the github repository, along with a Google Groups mailing list:</p>
+
+<ul>
+  <li><p><strong>Mailing list:</strong> <a href="mailto:hydra-processing@googlegroups.com">hydra-processing@googlegroups.com</a></p></li>
+  <li><p><strong>Issue tracking:</strong> <a href="https://github.com/Findwise/Hydra/issues?state=open">github.com/Findwise/Hydra/issues</a></p></li>
 </ul>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/laserval">laserval</a></p>
+        <p>Project maintained by <a href="https://github.com/Findwise" class="avatar"><img src="https://secure.gravatar.com/avatar/4cdfaba7b998f86851a0f7dd53b078d2?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="48" height="48"/></a> <a href="https://github.com/Findwise">Findwise</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
