Adds link to google group

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ All administration of the pipeline, as well as traceability, are handled directl
 <p>The community is based around the github repository, along with a Google Groups mailing list:</p>
 
 <ul>
-  <li><p><strong>Mailing list:</strong> <a href="mailto:hydra-processing@googlegroups.com">hydra-processing@googlegroups.com</a></p></li>
+  <li><p><strong>Mailing list:</strong> <a href="https://groups.google.com/forum/?fromgroups#!forum/hydra-processing">Hydra on Google Groups</a> (<a href="mailto:hydra-processing@googlegroups.com">hydra-processing@googlegroups.com</a>)</p></li>
   <li><p><strong>Issue tracking:</strong> <a href="https://github.com/Findwise/Hydra/issues?state=open">github.com/Findwise/Hydra/issues</a></p></li>
 </ul>
       </section>
