Adds blurb about licensing and Maven artifacts.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@ All administration of the pipeline, as well as traceability, are handled directl
 <ul>
   <li><p><strong>Mailing list:</strong> <a href="https://groups.google.com/forum/?fromgroups#!forum/hydra-processing">Hydra on Google Groups</a> (<a href="mailto:hydra-processing@googlegroups.com">hydra-processing@googlegroups.com</a>)</p></li>
   <li><p><strong>Issue tracking:</strong> <a href="https://github.com/Findwise/Hydra/issues?state=open">github.com/Findwise/Hydra/issues</a></p></li>
+  <li><p><strong>Maven artifact group:</strong> <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.findwise.hydra%22">com.findwise.hydra</a>
 </ul>
+
+<h3>License</h3>
+
+<p>Hydra is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/Findwise" class="avatar"><img src="https://secure.gravatar.com/avatar/4cdfaba7b998f86851a0f7dd53b078d2?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="48" height="48"/></a> <a href="https://github.com/Findwise">Findwise</a></p>
