Adds blurb about talks and conferences.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@ Architecturally Hydra sits in between the search engine and the source integrati
 
 <p>While it's up to you to reattach a head should it be cut off, Hydra does regenerate it's teeth - the processing stages. Should one fail, for instance if your PDF Parser runs across a corrupted PDF and crashes, it will be automatically restarted and begin processing new documents.</p>
 
+<h2>Talks</h2>
+
+<p>Hydra has been presented at a couple of conferences:</p>
+
+<ul>
+  <li><p><a href="http://vimeo.com/44716953">Hydra - an open source processing framework</a> (Berlin Buzzwords 2012)</p></li>
+  <li><p><a href="http://vimeo.com/43402525">Introducing Hydra – An Open Source Document Processing Framework</a> (Lucene Revolution 2012)</p></li>
+</ul>
+
 <h2>Description</h2>
 
 <p>
