--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Hydra - distributed document processing</title>
+    <link rel="shortcut icon" href="images/hydra-favicon-16.png" sizes="16x16"/>
+    <link rel="shortcut icon" href="images/hydra-favicon-32.png" sizes="32x32"/>
+    <link rel="shortcut icon" href="images/hydra-favicon-64.png" sizes="64x64"/>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
