--- a/index.html
+++ b/index.html
@@ -109,17 +109,36 @@ All administration of the pipeline, as well as traceability, are handled directl
 
 <h2>Downloads</h2>
 
-<p>To get started, download the latest release and have a look at the <a href="https://github.com/Findwise/Hydra/blob/0.3.0/README.md">readme on Github</a>.</p>
+<p>To get started, download the latest release and have a look at the <a href="https://github.com/Findwise/Hydra/blob/0.3.1/README.md">readme on Github</a>.</p>
 
-<h3>Latest release 0.3.0</h3>
+<h3>Latest release 0.3.1</h3>
 <h4>Core and Admin service:</h4>
+<ul>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-core.jar">Core runnable</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/resource.properties">Configuration file for Core</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra.war">Admin Service web app</a></li>
+</ul>
+<h4>Stage libraries:</h4>
+<ul>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-basic-stages-jar-with-dependencies.jar">Basic stages</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-web-stages-jar-with-dependencies.jar">Web stages</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-tika-stages-jar-with-dependencies.jar">Apache Tika stages</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-debugging-stage-jar-with-dependencies.jar">Debugging stages</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-elasticsearch-out-stage-jar-with-dependencies.jar">Elasticsearch output stage</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-solr-out-stage-jar-with-dependencies.jar">Solr 4+ output stage</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-solr-3-out-stage-jar-with-dependencies.jar">Solr 3.6 output stage</a></li>
+</ul>
+<h4>Source:</h4>
+<ul>
+  <li><a href="https://github.com/Findwise/Hydra/archive/0.3.1.zip">ZIP</a></li>
+</ul>
+
+<h3>Older releases</h3>
+<h4>0.3.0</h4>
 <ul>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-core.jar">Core runnable</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/resource.properties">Configuration file for Core</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra.war">Admin Service web app</a></li>
-</ul>
-<h4>Stage libraries:</h4>
-<ul>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-basic-stages-jar-with-dependencies.jar">Basic stages</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-web-stages-jar-with-dependencies.jar">Web stages</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-tika-stages-jar-with-dependencies.jar">Apache Tika stages</a></li>
@@ -127,16 +146,12 @@ All administration of the pipeline, as well as traceability, are handled directl
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-elasticsearch-out-stage-jar-with-dependencies.jar">Elasticsearch output stage</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-solr-out-stage-jar-with-dependencies.jar">Solr 4+ output stage</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-solr-3-out-stage-jar-with-dependencies.jar">Solr 3.6 output stage</a></li>
+  <li><a href="https://github.com/Findwise/Hydra/archive/0.3.0.zip">Source ZIP</a></li>
 </ul>
-<h4>Source:</h4>
+<h4>0.2.0</h4>
 <ul>
-  <li><a href="https://github.com/Findwise/Hydra/archive/0.3.0.zip">ZIP</a></li>
-</ul>
-
-<h3>Older releases</h3>
-<ul>
-  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.2.0/hydra-core-0.2.jar">0.2.0 - Core runnable</a></li>
-  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.2.0/hydra-basic-stages-jar-with-dependencies.jar">0.2.0 - Basic stages</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.2.0/hydra-core-0.2.jar">Core runnable</a></li>
+  <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.2.0/hydra-basic-stages-jar-with-dependencies.jar">Basic stages</a></li>
 </ul>
 
 <h2>Get involved</h2>
