Updates downloads section with latest release

--- a/index.html
+++ b/index.html
@@ -111,15 +111,16 @@ All administration of the pipeline, as well as traceability, are handled directl
 
 <p>To get started, download the latest release and have a look at the <a href="https://github.com/Findwise/Hydra/blob/0.3.1/README.md">readme on Github</a>.</p>
 
-<h3>Latest release 0.3.1</h3>
-<h4>Core and Admin service:</h4>
+<h3>Latest release</h3>
+
+<p>Go to <a href="https://github.com/Findwise/Hydra/releases">the releases page on Github</a> to get the latest release.</p>
+
+<h3>Older releases</h3>
+<h4>0.3.1</h4>
 <ul>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-core.jar">Core runnable</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/resource.properties">Configuration file for Core</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra.war">Admin Service web app</a></li>
-</ul>
-<h4>Stage libraries:</h4>
-<ul>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-basic-stages-jar-with-dependencies.jar">Basic stages</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-web-stages-jar-with-dependencies.jar">Web stages</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-tika-stages-jar-with-dependencies.jar">Apache Tika stages</a></li>
@@ -127,13 +128,8 @@ All administration of the pipeline, as well as traceability, are handled directl
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-elasticsearch-out-stage-jar-with-dependencies.jar">Elasticsearch output stage</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-solr-out-stage-jar-with-dependencies.jar">Solr 4+ output stage</a></li>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.1/hydra-solr-3-out-stage-jar-with-dependencies.jar">Solr 3.6 output stage</a></li>
-</ul>
-<h4>Source:</h4>
-<ul>
   <li><a href="https://github.com/Findwise/Hydra/archive/0.3.1.zip">ZIP</a></li>
 </ul>
-
-<h3>Older releases</h3>
 <h4>0.3.0</h4>
 <ul>
   <li><a href="https://s3-eu-west-1.amazonaws.com/findwise-hydra/releases/0.3.0/hydra-core.jar">Core runnable</a></li>
@@ -167,6 +163,8 @@ All administration of the pipeline, as well as traceability, are handled directl
 <h3>License</h3>
 
 <p>Hydra is licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a></p>
+
+<img class="hydra" src="images/big-hydra-no-text.png"/>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/Findwise" class="avatar"><img src="https://secure.gravatar.com/avatar/4cdfaba7b998f86851a0f7dd53b078d2?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="48" height="48"/></a> <a href="https://github.com/Findwise">Findwise</a></p>
