--- a/admin-service/src/main/webapp/WEB-INF/static/index.html
+++ b/admin-service/src/main/webapp/WEB-INF/static/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="handlebars.js"></script>
     <script type="text/javascript" src="handlebars.form-helpers.min.js"></script>
     <script type="text/javascript" src="underscore.js"></script>
+    <script type="text/javascript" src="jquery.json-2.4.min.js"></script>
     <script type="text/javascript" src="hydra.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <!--<script type="text/javascript" src="bootstrap.min.js"></script> -->
@@ -243,7 +244,7 @@
                           <h4 class="modal-title" id="addStageModalLabel-{{this.className}}">Add {{this.name}}</h4>
                         </div>
                         <form action="#addstage" class="form-horizontal" role="form" 
-                            method="post" onSubmit="return addStage(this);">
+                            method="post" id="{{this.className}}-form" onSubmit="return addStage(this);" >
                             <div class="modal-body">
                                 
                                 {{> libraries_add_stage_properties}}
@@ -262,16 +263,27 @@
 	</script>
         <script type="text/x-handlebars-template" id="libraries_add_stage_properties"
 		class="partial_template">
-                <input type="hidden" id="{{stageClass}}" value="{{this.className}}" />
-                 <div class="form-group">
-                       <label class="col-sm-4 control-label" for="stagename">
-                           Stage name*
-                       </label>
-                       <div class="col-sm-8">
-                           <input type="text" name="stageName" class="form-control" id="stageName" placeholder="String" required />
-                           <span class="help-block">Name for stage to be added</span>
-                       </div>
-                   </div>
+                <input type="hidden" id="stageClass" value="{{this.className}}" />
+                <input type="hidden" id="libId" value="{{this.libId}}" />
+                
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="stagename">
+                        Stage name*
+                    </label>
+                    <div class="col-sm-8">
+                        <input type="text" name="stageName" class="form-control" id="stageName" placeholder="String" required />
+                        <span class="help-block">Name for stage to be added</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label" for="stagegroup">
+                        Stage group
+                    </label>
+                    <div class="col-sm-8">
+                        <input type="text" name="stageGroup" class="form-control" id="stageGroup" placeholder="String" />
+                        <span class="help-block">Stage group name for stage. If blank, stage name will be used for stage group</span>
+                    </div>
+                </div>
                 {{#each this.parameters}}
                     <div class="form-group">
                        <label class="col-sm-4 control-label" for="{{@key}}">
@@ -318,9 +330,11 @@
                 <form action="#upload" class="form-horizontal" role="form" 
                     method="post" onSubmit="return addLibrary();" id="library-upload" enctype="multipart/form-data">  
                 <div class="modal-body">
-                      <div id="libUploadSuccess" class="alert alert-success" style="display: none">
+                        {{#if success}}
+                      <div id="libUploadSuccess" class="alert alert-success">
                                Upload successfull!
                       </div>
+                      {{/if}}
                       <div  id="libUploadFail" class="alert alert-error"  style="display: none">
                           <strong>Error uploading the library</strong>
                       </div>
