--- a/admin-service/src/main/webapp/WEB-INF/static/index.html
+++ b/admin-service/src/main/webapp/WEB-INF/static/index.html
@@ -11,9 +11,6 @@
     <link type="text/css" rel="stylesheet" href="hydra.css" media="screen">
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" src="handlebars.js"></script>
-    <script type="text/javascript" src="handlebars.form-helpers.min.js"></script>
-    <script type="text/javascript" src="underscore.js"></script>
-    <script type="text/javascript" src="jquery.json-2.4.min.js"></script>
     <script type="text/javascript" src="hydra.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <!--<script type="text/javascript" src="bootstrap.min.js"></script> -->
@@ -330,12 +327,12 @@
                 <form action="#upload" class="form-horizontal" role="form" 
                     method="post" onSubmit="return addLibrary();" id="library-upload" enctype="multipart/form-data">  
                 <div class="modal-body">
-                        {{#if success}}
-                      <div id="libUploadSuccess" class="alert alert-success">
+                        
+                      <div id="libUploadSuccess" class="alert alert-success" style="display: none">
                                Upload successfull!
                       </div>
-                      {{/if}}
-                      <div  id="libUploadFail" class="alert alert-error"  style="display: none">
+                      
+                      <div  id="libUploadFail" class="alert alert-error" style="display: none"   >
                           <strong>Error uploading the library</strong>
                       </div>
                       <div class="form-group" >
