Adds analytics tracking to readme
Adds Google Analytics tracking using ga-beacon.

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ All administration of the pipeline, as well as traceability, are handled directl
       <footer>
         <p>Project maintained by <a href="https://github.com/Findwise" class="avatar"><img src="https://secure.gravatar.com/avatar/4cdfaba7b998f86851a0f7dd53b078d2?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="48" height="48"/></a> <a href="https://github.com/Findwise">Findwise</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></small></p>
+        <p>Google Analytics tracking using <a href="https://github.com/igrigorik/ga-beacon">ga-beacon <img src="https://ga-beacon.appspot.com/UA-45204268-3/Hydra/project" /></a></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
