Moved to using webjars for managed resources

--- a/admin-service/src/main/webapp/WEB-INF/static/index.html
+++ b/admin-service/src/main/webapp/WEB-INF/static/index.html
@@ -4,8 +4,8 @@
     <title>Hydra Admin Service GUI</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" media="screen">
-	<link type="text/css" rel="stylesheet" href="css/hydra.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/hydra/webjars/bootstrap/3.0.3/css/bootstrap.min.css" media="screen">
+    <link type="text/css" rel="stylesheet" href="/hydra//gui/css/hydra.css" media="screen">
 
 
 </head>
@@ -411,11 +411,12 @@
                     {{/listDocuments}}
     </script>
 
-    <script type="text/javascript" src="js/libs/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/controller.js"></script>
-    <script type="text/javascript" src="js/helpers.js"></script>
-    <script type="text/javascript" src="js/libs/handlebars-v1.3.0.min.js"></script>
-    <script type="text/javascript" src="js/hydra.js"></script>
-    <script type="text/javascript" src="js/libs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/hydra/webjars/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="/hydra/gui/js/controller.js"></script>
+    <script type="text/javascript" src="/hydra/gui/js/helpers.js"></script>
+    <script type="text/javascript" src="/hydra/webjars/handlebars/1.2.1/handlebars.min.js"></script>
+    <script type="text/javascript" src="/hydra/webjars/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/hydra/gui/js/hydra.js"></script>
+
 </body>
 </html>
